// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WordHeatMap > word color is blue 1`] = `
<DocumentFragment>
  <span
    class="m-2 rounded-2xl border-2 p-3 md:m-5"
    data-testid="heat-map-word"
    style="background-color: rgb(NaN, NaN, 255);"
  >
    <span
      class="font-bold text-gray-900"
    >
      word
    </span>
  </span>
</DocumentFragment>
`;

exports[`WordHeatMap > word color is green 1`] = `
<DocumentFragment>
  <span
    class="m-2 rounded-2xl border-2 p-3 md:m-5"
    data-testid="heat-map-word"
    style="background-color: rgb(NaN, NaN, NaN);"
  >
    <span
      class="font-bold text-gray-900"
    >
      word
    </span>
  </span>
</DocumentFragment>
`;

exports[`WordHeatMap > word color is none 1`] = `
<DocumentFragment>
  <span
    class="m-2 rounded-2xl border-2 p-3 md:m-5"
    data-testid="heat-map-word"
    style="background-color: rgb(230, 230, 230);"
  >
    <span
      class="font-bold text-gray-900"
    >
      word
    </span>
  </span>
</DocumentFragment>
`;

exports[`WordHeatMap > word color is red 1`] = `
<DocumentFragment>
  <span
    class="m-2 rounded-2xl border-2 p-3 md:m-5"
    data-testid="heat-map-word"
    style="background-color: rgb(255, NaN, NaN);"
  >
    <span
      class="font-bold text-gray-900"
    >
      word
    </span>
  </span>
</DocumentFragment>
`;
